# AutoAgentTestRepo

./: .mypy.ini  README.md  __init__.py  counter.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  string_operations.py  test_counter.py  test_string_operations.py  timeapi.io  unittest.mock  worldtimeapi.org
.agent-automation/: architecture.yaml
docs/: api_integration.md  api_reference.md  architecture.md  console_commands.md  counter.md  counter_api.md  counter_design.md  counter_display.md  error_handling.md  game_loop.md  help_system.md  movement_system.md  nz_datetime.md  pi_calculation.md  pi_calculator.md  string_utils.md
lib/: textHelpers.ts  text_helpers.py
pkg/stringutils/: capitalize.go  capitalize_test.go
src/: __init__.py  command_parser.py  command_processor.py  console_interface.py  constants.py  counter.py  counter_cli.py  feedback_messages.py  game_controller.py  game_engine.py  game_loop.py  game_state.py  game_world.py  help_system.py  location.py  location_display.py  locations_data.py  math_utils.py  movement.py  nelson_time.py  nz_datetime.py  pi_calculator.py  player.py  stringUtils.js  string_utils.py  world.py  world_initializer.py
src/main/java/com/project/utils/: StringUtils.java
src/test/java/com/project/utils/: StringUtilsTest.java
src/utils/: __init__.py  string_operations.py
tests/: stringUtils.test.js  test_bdd_location_description.py  test_command_parser.py  test_command_processor.py  test_console_interface.py  test_counter.py  test_counter_cli.py  test_error_handling.py  test_feedback_messages.py  test_game_controller.py  test_game_engine.py  test_game_loop.py  test_game_state.py  test_game_world.py  test_help_system.py  test_location.py  test_location_display.py  test_math_utils.py  test_movement.py  test_movement_system_integration.py  test_nelson_time.py  test_nz_datetime.py  test_pi_calculation_function_implementation.py  test_pi_calculator.py  test_player.py  test_string_operations.py  test_string_utils.py  test_world.py  test_world_initializer.py
tests/features/: __init__.py  environment.py  test_nw_auckland_locations.bdd.py
tests/features/steps/: counter_steps.py  location_steps.py
